--- a/WixInstaller/Package.wxs
+++ b/WixInstaller/Package.wxs
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Wix xmlns="http://wixtoolset.org/schemas/v4/wxs">
   <Package
-    Name="TrayControl"
+    Id="BNK.TrayControlInstaller"
+    Name="TrayControlInstaller"
     Manufacturer="BNK"
     Version="$(var.ProductVersion)"
     UpgradeCode="{FB4B7980-0702-4117-9B80-7FEAD6ABD78C}">
-    <MajorUpgrade
-      DowngradeErrorMessage="A newer version of TrayControl is already installed." />
-    <MediaTemplate />
+    <MajorUpgrade AllowDowngrades="yes" />
     <Feature Id="MainFeature" Title="TrayControl" Level="1">
       <ComponentGroupRef Id="MainFiles" />
     </Feature>
