--- a/WixInstaller/Package.wxs
+++ b/WixInstaller/Package.wxs
@@ -6,7 +6,7 @@
     Manufacturer="BNK"
     Version="$(var.ProductVersion)"
     UpgradeCode="{FB4B7980-0702-4117-9B80-7FEAD6ABD78C}">
-    <MajorUpgrade AllowDowngrades="yes" />
+    <MajorUpgrade DowngradeErrorMessage="A newer version is already installed." />
     <Feature Id="MainFeature" Title="TrayControl" Level="1">
       <ComponentGroupRef Id="MainFiles" />
     </Feature>
